XONSH_TRACEBACK_LOGFILE.txt
xonsh.tools.XonshError: xonsh: subprocess mode: command not found: powershell -Command code C:\ProgramData\xonsh
xonsh.tools.XonshError: xonsh: subprocess mode: command not found: code C:\ProgramData\xonsh; exit
Traceback (most recent call last):
  File "C:\ProgramData\xonsh\xonshrc", line 230, in <module>
    aliases['ox'] = exit#f"powershell -Command code {Path($XONSHRC[0]).parent}"
NameError: name 'exit' is not defined
xonsh.tools.XonshError: xonsh: subprocess mode: command not found: powershell -Command code C:\ProgramData\xonsh
xonsh.tools.XonshError: xonsh: subprocess mode: command not found: spotify_dl
xonsh.tools.XonshError: xonsh: subprocess mode: command not found: spotify_dl
xonsh.tools.XonshError: xonsh: subprocess mode: command not found: ers\hmbem\Desktop\test
Traceback (most recent call last):
  File "C:\Users\hmbem\Desktop\Tasks\WebDev\Temporary Projects\python\xonsh\venv\lib\site-packages\xonsh\ptk_shell\shell.py", line 384, in _push
    code = self.execer.compile(
  File "C:\Users\hmbem\Desktop\Tasks\WebDev\Temporary Projects\python\xonsh\venv\lib\site-packages\xonsh\execer.py", line 136, in compile
    code = compile(tree, filename, mode)
TypeError: AnnAssign with simple non-Name target
xonsh.tools.XonshError: xonsh: subprocess mode: command not found: ers\hmbem\Desktop\test
  File "<stdin>", line 1
    start Path($XONSH_DATA_DIR).parent
         ^
SyntaxError: ('code: Path',)
  File "<stdin>", line 1
    explorer Path($XONSH_DATA_DIR).parent
            ^
SyntaxError: ('code: Path',)
  File "<stdin>", line 1
    explorer Path($XONSH_DATA_DIR).parent
            ^
SyntaxError: ('code: Path',)
  File "<stdin>", line 1
    explorer str(Path($XONSH_DATA_DIR).parent)
            ^
SyntaxError: ('code: str',)
  File "<stdin>", line 1
    start str(Path($XONSH_DATA_DIR).parent)
         ^
SyntaxError: ('code: str',)
xonsh.tools.XonshError: xonsh: subprocess mode: command not found: show
